--- a/procedure_detail.html
+++ b/procedure_detail.html
@@ -181,8 +181,8 @@
 				  </div>
 				</div>
 				<!--BUTTON-->
-				<div  class="pull-left" style="display:inline-block;width:57.89px;height:34px;margin:0px 0px 5px 0px;">
-				  <button type="button" class="btn btn-dark pull-left" style="margin:5px 5px 5px 0px;">조 회</button>
+				<div  class="pull-left" style="display:inline-block;width:56px;height:34px;margin:0px 0px 5px 0px;">
+				  <button type="button" class="btn btn-dark pull-left" style="margin:5px 0px 5px 0px;">조 회</button>
 				</div>
 			  </form>
 		    </div>
@@ -303,7 +303,7 @@
 						  DataTables has most features enabled by default, so all you need to do to use it with your own tables is to call the construction function: <code>$().DataTable();</code>
 						</p>
 						-->
-						<table id="datatableSummary" class="table table-striped table-bordered">
+						<table id="datatableDetail" class="table table-striped table-bordered">
 						  <thead>
 							<tr>
 							  <th>Name</th>
