--- a/summary.html
+++ b/summary.html
@@ -94,7 +94,6 @@
 		
         <!-- page content -->
         <div class="right_col" role="main">
-          <div class="">
 		  	<!-- top tiles -->
 			<div class="row top_tiles">
               <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12">
@@ -172,8 +171,8 @@
 					  </div>
 				    </div>
 				  </div>
-				  <div  class="pull-left" style="display:inline-block;width:57.89px;height:34px;margin:0px 0px 5px 0px;">
-			        <button type="button" class="btn btn-dark pull-left" style="margin:5px 5px 5px 0px;">조 회</button>
+				  <div  class="pull-left" style="display:inline-block;width:56px;height:34px;margin:0px 0px 5px 0px;">
+			        <button type="button" class="btn btn-dark pull-left" style="margin:5px 0px 5px 0px;">조 회</button>
 				  </div>
 			    </div>
 			  </div>
@@ -211,12 +210,12 @@
 						<table id="datatableSummary" class="table table-striped table-bordered">
 						  <thead>
 							<tr>
-							  <th>Name</th>
-							  <th>Position</th>
-							  <th>Office</th>
-							  <th>Age</th>
-							  <th>Start date</th>
-							  <th>Salary</th>
+							  <th>서버 이름</th>
+							  <th>프로시저 타입</th>
+							  <th>프로시저 이름</th>
+							  <th>실행 시작 시각</th>
+							  <th>실행 완료 시각</th>
+							  <th>프로시저 상태</th>
 							</tr>
 						  </thead>
 
@@ -677,7 +676,6 @@
 				</div>
 			</div>
 			<!-- /Data Table -->
-          </div>
         
 		</div>
         <!-- /page content -->
